k8s/ingress_old.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-ingress
  namespace: online-shop-ns  
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /shop
          backend:
            service:
              name: online-shop-svc
              port:
                number: 5173
